fix scroll z-index bug

--- a/src/main-layout.css
+++ b/src/main-layout.css
@@ -7,6 +7,7 @@
 .nav-bar{
     position: fixed;
     width:100%;
+    z-index: 10000;
 }
 .mui-appbar{
     background-color: #FF7043;
